Configured logging setting on the project - enabled writing logs

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,3 +11,16 @@ spring:
     name: ToDoAPI
   liquibase:
     change-log: classpath:db/changelog/master.yaml
+logging:
+  file:
+    name: logs/app.log
+  level:
+    root: INFO
+    org.springframework: INFO
+    com.zaxxer.hikari: ERROR
+    liquibase: ERROR
+    org.springframework.security: ERROR
+  logback:
+    rollingpolicy:
+      max-history: 5
+      max-file-size: 10MB
