Refactor of Task model and tasks table

--- a/src/main/resources/db/changelog/initial/001_create_tables.yaml
+++ b/src/main/resources/db/changelog/initial/001_create_tables.yaml
@@ -96,3 +96,13 @@ databaseChangeLog:
                     nullable: false
                     foreignKeyName: statuses_task_fk
                     references: task_statuses(id)
+              - column:
+                  name: creation_date
+                  type: datetime
+                  constraints:
+                    nullable: false
+              - column:
+                  name: update_date
+                  type: datetime
+                  constraints:
+                    nullable: false
